Added State Change Button to Appendix B.

--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -1241,6 +1241,7 @@ Table \ref{tab:graphical} lists the various elements available for use in the Us
            Element Types    & Commands\footnote{The (WL) refers to variants \emph{with labels}.} \\
       \midrule
       Button      & addButton(WL)\footnote{Include variants with observer specified by id.\label{fn:obs}}\\
+      State Change Button\footnote{State change buttons do not advance the simulation schedule.} & addStateChangeButton(WL)\footref{fn:obs} \\
      ToggleButton & addToggleButton(WL)\footref{fn:obs} \\
      Slider & addSlider(WL) \\
      Chooser & addChooser(WL) \\
