--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -892,7 +892,7 @@ In the Data Set Editor, type Agent Counts as the Data Set ID, and Non-Aggregate\
 \item
 In the next few steps, we specify the data sources that make up our data set. The Standard Sources tab allows us to add some standard data sources to our data set. For this tutorial we uncheck all of the boxes.
 \item
-Next, select the Method Data Sources tab. The Method Data Sources tab allows us to create data sources that will call methods on agents in our model. For the Source Class select UserObserver. Click Add to add an entry . Left click in the Method column of the added entry and choose \emph{timestamp} from the drop down list.
+Next, select the Method Data Sources tab. The Method Data Sources tab allows us to create data sources that will call methods on agents in our model. For the Source Class select UserObserver. Click Add to add an entry . Double click in the Method column of the added entry and choose \emph{timestamp} from the drop down list.
 \item\label{it:toRepeat}
 Click Add again. This time choose \emph{getRelogoRun}\footnote{Groovy automatically generates ``getters" and ``setters" for properties you define. If the property is ``relogoRun" like in this example, the methods \emph{getRelogoRun} and \emph{setRelogoRun} are generated. This capitalization scheme, where the beginning of multiple contiguous words are capitalized, is a standard in many programming languages, including Groovy, and is referred to as ``camel-casing". } from the drop down list.
 \item
