Modified default workspace settings for ReLogo based on changes in Groovy plugin.

--- a/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
+++ b/docs/ReLogoGettingStarted/ReLogoGettingStarted.tex
@@ -1112,11 +1112,13 @@ Repast Simphony is distributed with a default workspace. If you have modified yo
 \item Under Groovy:
 	\begin{itemize}
 	\item Check: Use monospace font for JUnit
-	\item Uncheck: Underline staticly unknown references
 	\item Uncheck: Do not use parens around methods with arguments
 	\item Uncheck: Use brackets for closure arguments
 	\end{itemize}
-	
+\item Under Groovy $\rightarrow$ Editor:
+	\begin{itemize}
+	\item Uncheck: Enable semantic highlighting ...
+	\end{itemize}
 \item Under Run/Debug $\rightarrow$ Launching:
 	\begin{itemize}
 	\item Check:  Always launch the previously launched application
