--- a/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
+++ b/docs/RepastJavaGettingStarted/RepastJavaGettingStarted.tex
@@ -99,6 +99,8 @@ The first thing we must do is create a new Repast Simphony project. Assuming you
 \end{center}
 \end{figure}
 
+In addition, by default autobuilding is disabled. However, this is not appropriate for projects written in Java. To enable auto building go to the Project menu and select Build Automatically.
+
 Lastly, if eclipse has defaulted to the ReLogo perspective switch it to the Java one. The perspective selections can be found in the upper right hand corner (Fig.~\ref{fig:javap}). Click the Java perspective.
 
 \begin{figure}[h]
